# cookietrails

./: AGENTS.md  CLAUDE.md  LICENSE  Procfile  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
cookie/: admin.py  asgi.py  settings.py  urls.py  wsgi.py
cookie/static/trails/: cookietrails.js
cookie/templates/: admin_event_success.html  base.html  calculator.html  cases.html  count.html  count_success.html  family_login.html  home.html  initial_order.html  initial_order_success.html  order_helper.html  pickup_return_event.html  pickup_return_event_success.html
cookie/templates/admin/trails/event/: change_list.html
cookie/templates/admin/trails/family/: change_form.html
cookie/templates/trails/widgets/: cookie_count_widget.html
cookie/trails/: admin.py  apps.py  context_processors.py  cookies.py  cookies_tests.py  family_auth.py  forms.py  models.py  urls.py  views.py
cookie/trails/migrations/: 0001_initial.py
cookie/trails/static/trails/: cookietrails.js
cookie/trails/templatetags/: trails_tags.py
data/: .gitignore
scripts/: booths_html_to_csv.py
