[project]
name = "cookietrails"
version = "0.1.0"
description = "Cookie inventory management tools for large Girl Scout troops."
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "django>=6.0.1",
    "django-browser-reload>=1.21.0",
    "django-environ>=0.12.0",
    "django-htmx>=1.27.0",
    "psycopg[binary]>=3.3.2",
]

[dependency-groups]
dev = ["django-stubs>=5.2.8", "djlint>=1.36.4", "ruff>=0.14.11", "ty>=0.0.12"]

[tool.ruff]
extend-exclude = ["*/migrations/*", ".venv/*"]

[tool.djlint]
profile = "django"
indent = 2
max_line_length = 120
format_attribute_template_tags = true
ignore = "H006,H030,H031"

[tool.ty.rules]
unused-ignore-comment = "ignore"
